# StockMarket

./: .gitignore  config.py  dashboard.py  main.py  menu.py  pyproject.toml
data/: EDA.ipynb  data_import.py
data/lSTMData/: lSTMData.h5
data/randomForestData/: randomDorestData.h5
mlruns/0/: meta.yaml
mlruns/329117422173031513/: meta.yaml
mlruns/329117422173031513/20014f4ba6e7408a835d0f7439d6c549/: meta.yaml
mlruns/329117422173031513/20014f4ba6e7408a835d0f7439d6c549/metrics/: rmse
mlruns/329117422173031513/20014f4ba6e7408a835d0f7439d6c549/params/: run name
mlruns/329117422173031513/20014f4ba6e7408a835d0f7439d6c549/tags/: mlflow.log-model.history
mlruns/329117422173031513/2723d7af9867456fb2eff5698eec4625/: meta.yaml
mlruns/329117422173031513/3d18831b1b454703b74863ff2102d0d8/: meta.yaml
mlruns/329117422173031513/8aa0ffec627b4ff8b7cdb586555cf6b9/: meta.yaml
mlruns/329117422173031513/b19b2d2d4f4f4bc2befcfe18b74f72c5/: meta.yaml
mlruns/329117422173031513/c1365a0cdea042049fe54be2e6b61e90/: meta.yaml
mlruns/626566591414455823/: meta.yaml
mlruns/626566591414455823/261dc1fe258647fcbc98d0490f28c41e/: meta.yaml
mlruns/626566591414455823/44c277f28037439a89ddb6d92ba9ae11/: meta.yaml
mlruns/626566591414455823/72950b3ed9f84448aa837ce5fb89f47a/: meta.yaml
mlruns/626566591414455823/f27695588c2f476786505f16615acc19/: meta.yaml
mlruns/840333798754623344/: meta.yaml
mlruns/840333798754623344/18ac7b4dda7547308eddb80c8624d0e2/: meta.yaml
mlruns/840333798754623344/b770d9cb17f14518aaf1e8d6b9017534/: meta.yaml
model_generate/: LSTM.py  LSTMModel.keras  LSTMTRacking.ipynb  RFTracking.ipynb  randomForest.py
model_generate/mlruns/0/: meta.yaml
(+55 files in other folders)
